Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49134

Android application crashed when using camera.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.5.0, 5.5.1
    • Multimedia
    • None
    • Android 4.0.3 on ARM (SMDKV210), build for API-16
    • b7880782b92e214d98bb957fb2ff6f7d5fffd104

      Android application crashed when using camera on device with capture adapter (car multimedia device).
      Logcat:
      W/dalvikvm(31868): JNI WARNING: JNI method called with exception pending
      W/dalvikvm(31868): in Ldalvik/system/NativeStart;.run)V (GetMethodID)
      W/dalvikvm(31868): Pending exception is:
      I/dalvikvm(31868): java.lang.RuntimeException: cancelAutoFocus failed
      I/dalvikvm(31868): at android.hardware.Camera.native_cancelAutoFocus(Native Method)
      I/dalvikvm(31868): at android.hardware.Camera.cancelAutoFocus(Camera.java:847)
      I/dalvikvm(31868): at dalvik.system.NativeStart.run(Native Method)
      I/dalvikvm(31868): "QtThread" prio=5 tid=13 NATIVE
      I/dalvikvm(31868): | group="main" sCount=0 dsCount=0 obj=0x41323f80 self=0x2b3620
      I/dalvikvm(31868): | sysTid=31958 nice=0 sched=0/0 cgrp=default handle=2969928
      I/dalvikvm(31868): | schedstat=( 0 0 0 ) utm=1 stm=0 core=0
      I/dalvikvm(31868): at dalvik.system.NativeStart.run(Native Method)
      I/dalvikvm(31868):
      E/dalvikvm(31868): VM aborting
      F/libc (31868): Fatal signal 11 (SIGSEGV) at 0xdeadd00d (code=1)

        1. camera_test.tgz
          1 kB
        2. logcat.txt
          15 kB
        For Gerrit Dashboard: QTBUG-49134
        # Subject Branch Project Status CR V

            ylopes Yoann Lopes
            naugreem Boris Shmarin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes